--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <h2>Projects</h2>
         <p>Here are some of my projects:</p>
         <ul>
-            <li><a href="https://leen-ai.github.io/index.html/">Project 1</a> - STUDENT ENROLLMENT FOR (website)</li>
+            <li><a href="https://leen-ai.github.io/index.html/">Project 1</a> - STUDENT ENROLLMENT FORM (website)</li>
 
         </ul>
     </section>
